Fixed chat bot alignment for all viewports

--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -376,6 +376,24 @@
   justify-content: space-around;
   align-items: center;
 }
+@media(min-width:1440px){
+  .hero__content__details{
+    transform: scale(1.2);
+  }
+  .chat{
+    transform: scale(1.3);
+    position: relative;
+    top: 10vh !important;
+    right: -5vw !important;
+  }
+}
+@media(max-width: 1440px) and (min-width: 1024px){
+  .chat{
+    position: relative;
+    top: 7vh !important;
+    right: -5vw !important;
+  }
+}
 @media(max-width:1024px) and (min-width:849px) {
   .hero{
     height: 900px !important;
